# midstate-pool-fast

./: .gitattributes  .gitignore  Cargo.toml  DESIGN.md  GPU_OC_SETTINGS.toml  MANUAL.md  MidstateAtomicSwap.sol  README.md  alice.db  bob.db  fixes.patch  limit_order.msc  my_changes.txt  private_spend.msc  protocol_diff.txt  scan_bounties.sh  yellowpaper.md
.cargo/: config.toml
.github/workflows/: build.yml  deploy-wallet.yml
docs/: CODING.md
docs/design/: pruning-licenses.md
midstate-pool/: Cargo.toml
midstate-pool/data/: pool.redb
midstate-pool/src/: main.rs
scripts/: telegram-watchdog.example.env  telegram-watchdog.py
sdk/: package-lock.json  package.json  test.js
sdk/pkg/: wasm_wallet.d.ts  wasm_wallet.js  wasm_wallet_bg.wasm
sdk/src/: client.js  index.js  p2p.js  storage.js  utils.js  wallet.js
src/: main.rs  mempool.rs  mix.rs  node.rs  pool.rs  storage.rs  sync.rs
src/core/: extension.rs  filter.rs  finality.rs  gpu_mining.rs  mmr.rs  mod.rs  mss.rs  script.rs  simd_mining.rs  state.rs  transaction.rs  types.rs  wots.rs
src/network/: light_protocol.rs  mod.rs  protocol.rs
src/rpc/: chat.html  explorer.html  handlers.rs  midstate.css  miner_dashboard.html  mod.rs  pow_governor.rs  server.rs  types.rs
src/storage/: batch_store.rs  search_index.rs
src/wallet/: coinjoin.rs  crypto.rs  defrag.rs  mod.rs
wasm-wallet/: Cargo.toml  hub.mjs  index.html  light_client.bundle.js  light_client.js  sw.js  worker.js
wasm-wallet/.cargo/: config.toml
wasm-wallet/pkg/: wasm_wallet.d.ts  wasm_wallet.js  wasm_wallet_bg.wasm  wasm_wallet_bg.wasm.d.ts
wasm-wallet/src/: lib.rs
wasm-wallet/website/: ide.html  ide_style.css  index.html
website/: index.html
