[package]
name = "midstate"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
redb = "2.0"
hex = "0.4"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = { version = "0.11", features = ["json"] }
aes-gcm = "0.10"
rpassword = "7.3"
dirs = "5.0"
rand_chacha = "0.3"
blake3 = "1.5"
argon2 = "0.5"
rayon = "1.8"
libp2p = { version = "0.54", features = ["tokio", "noise", "tcp", "yamux", "kad", "identify", "request-response", "macros","quic","relay", "dcutr", "autonat"] }
futures = "0.3"
async-trait = "0.1"
toml = "1.0.3"
primitive-types = "0.14"

[features]
fast-mining = []

[dev-dependencies]
tempfile = "3.8"
