[package]
name = "midstate"
version = "0.1.0"
edition = "2021"

[dependencies]
# PURE RUST / WASM-SAFE: Cryptography, Math, Data Structures, Serialization
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
hex = "0.4"
aes-gcm = "0.10"
rand_chacha = "0.3"
blake3 = "1.5"
argon2 = "0.5"
rayon = "1.8"
futures = "0.3"
async-trait = "0.1"
primitive-types = "0.14"
im = { version = "15.1", features = ["serde"] }
bip39 = "2.0"
toml = "1.0.3"
tracing = "0.1"

# NATIVE ONLY: Networking, File System, OS Allocators, CLI, Web Servers
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redb = "2.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = { version = "0.11", features = ["json"] }
rpassword = "7.3"
dirs = "5.0"
libp2p = { version = "0.54", features = ["tokio", "noise", "tcp", "yamux", "kad", "identify", "request-response", "macros","quic","relay", "dcutr", "autonat"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.4" # Use the version you currently have

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = "0.1.43" # Use the version you currently have

[features]
fast-mining = []

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = "fat"            # Link Time Optimization across all crates
codegen-units = 1      # Slower to compile, but produces faster code
panic = "abort"        # Removes panic unwinding infrastructure, saves memory/CPU
strip = true           # Strips debug symbols, makes the binary tiny
