[package]
name = "midstate-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
# 1. FIXED PATH: Since you created the pool folder INSIDE the midstate node folder, 
# the parent directory (..) is the core library.
midstate = { path = ".." } 

tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.4"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
redb = "2.0"
moka = { version = "0.12", features = ["future"] }
bincode = "1.3"

# 2. ADDED MISSING DEPENDENCIES:
anyhow = "1.0" # Needed for error handling in payout.rs
rand = "0.8"   # Needed for random salts and MSS key generation
