[package]
name = "wasm-wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
hex = "0.4"
anyhow = "1.0"
midstate = { path = "../" }
blake3 = "1.5"
# 1. We must explicitly pull in version 0.2 and 0.3 of getrandom with the "js" features enabled
# because some of your deep dependencies (like libp2p or ed25519) might be using an older version.
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# 2. Add the rand crate (used by your seed generation logic)
rand = { version = "0.8" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.91"

[profile.release]
opt-level = 3        # Maximum optimization for speed
lto = "fat"          # Link Time Optimization: allows aggressive cross-crate inlining
codegen-units = 1    # Forces compilation into a single unit (slower to compile, much faster to run)
panic = "abort"      # Removes stack unwinding code, shrinking the Wasm binary
strip = true         # Strips symbols from the binary

[package.metadata.wasm-pack.profile.release]
# Tell wasm-opt to run at max optimization (-O3) AND allow bulk memory operations
wasm-opt = ["-O3", "--enable-bulk-memory"]
